# pjsk-auto-play

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  pjsk-helper.sln
depends/MikuMikuWorld/: BinaryReader.cpp  BinaryWriter.cpp  CMakeLists.txt  MmwFile.cpp  MmwIO.cpp  Score.cpp  ScoreConverter.cpp  SusParser.cpp
form/: pjsk_auto_play.ui
include/common/: hr_line.h  psh_utils.hpp  range_list.hpp
include/image/: events.h  images.h  multi_play_controller.h
include/mumu/: mumu_client.h  mumu_lib_loader.h
include/player/: auto_play_config.h  auto_player.h  note_time_estimator.h
include/screen/: i_screen.h
include/test/: psh_test.hpp
include/touch/: i_touch.h  mini_touch_client.h
include/window/: main_window.h  qt_log_sink.h
pjsk-helper/: auto_play_config.h  auto_player.cpp  auto_player.h  framework.cpp  framework.h  hr_line.cpp  i_screen.h  i_touch.cpp  i_touch.h  main.cpp  main_window.cpp  main_window.h  mini_touch_client.cpp  mini_touch_client.h  mumu_client.cpp  mumu_client.h  mumu_lib_loader.cpp  mumu_lib_loader.h  note_finder.cpp  note_finder.h  note_time_estimator.cpp  note_time_estimator.h  pjsk-helper.vcxproj  pjsk-helper.vcxproj.filters  pjsk_helper.qrc  pjsk_helper.ui  psh_utils.hpp  ring_buffer.hpp  track_controller.cpp  track_controller.h
py/: .gitignore
py/src/: main.py
resource/: events.qrc  pjsk_auto_play.qrc
resource/events/challenge_play_start/: event.json
resource/events/live_menu/: event.json
resource/events/main_menu/: event.json
resource/events/multi_mode_choosing/: event.json
resource/events/multi_play_start/: event.json
resource/events/multi_song_choosing/: event.json
resource/events/multi_song_playing/: event.json
resource/events/solo_song_choosing/: event.json
resource/events/solo_song_playing/: event.json
scripts/drop_fn/: main.py
scripts/events/: main.py
scripts/py/: .gitignore
scripts/py/src/: main.py
src/: main.cpp
src/common/: command.cpp  command.h  cv_utils.cpp  cv_utils.h  finalizer.hpp  hr_line.cpp  hr_line.h  time_utils.cpp  time_utils.h
src/image/: events.cpp  images.cpp  multi_play_controller.cpp
src/mumu/: input_event_codes.h  mumu_client.cpp  mumu_client.h  mumu_lib_loader.cpp  mumu_lib_loader.h
src/ocr/: ocr_utils.cpp  ocr_utils.h
src/player/: auto_play_constant.h  auto_player.cpp  auto_player.h  display_manager.cpp  display_manager.h  note_finder.cpp  note_finder.h  note_sample.cpp  note_sample.h  note_time_estimator.cpp  note_time_estimator.h  song_utils.cpp  song_utils.h
src/screen/: events.cpp  events.h  i_screen.cpp  i_screen.h
src/story/: story_auto_reader.cpp  story_auto_reader.h
src/sus/: score_touch.cpp  score_touch.h  sus_loader.cpp  sus_loader.h
src/test/: psh_test.hpp
src/touch/: i_touch.cpp  i_touch.h  mini_touch_client.cpp  mini_touch_client.h
src/window/: main_window.cpp  main_window.h  qt_log_sink.cpp
